assignment_23_june.ipynb

--- a/assignment_23_june.ipynb
+++ b/assignment_23_june.ipynb
@@ -108,7 +108,7 @@
    "id": "e973ed79-d433-441c-b9e2-04cb93729f26",
    "metadata": {},
    "source": [
-    "### 5. take a input from a user , if a string a str data type then get all the unique words from the string"
+    "### 5. Take a input from a user , if a string a str data type then get all the unique words from the string"
    ]
   },
   {
