assignment_23_june.ipynb

--- a/assignment_23_june.ipynb
+++ b/assignment_23_june.ipynb
@@ -113,15 +113,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5d16fbb1-ed99-4680-aa43-3f4c8d55e40b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a string : -  dmlfw\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dmlfw\n"
+     ]
+    }
+   ],
    "source": [
     "string= input(\"Enter a string : - \")\n",
     "word = string.split(\" \")\n",
     "print(*word , sep=\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd5f0dce-2b7b-4282-9c5f-776c5a807962",
+   "metadata": {},
+   "source": [
+    "### 6. Check duplicate and remove from string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "01ff09fa-c6d2-47a4-9adf-aa66beee22ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a string : - hey mh hai hey\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hey', 'mh', 'hai']\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_str = input(\"Enter a string : -\")\n",
+    "split_word = check_str.split(\" \")\n",
+    "new_str=[]\n",
+    "[new_str.append(x) for x in split_word if x not in new_str]\n",
+    "print(new_str)\n",
+    "\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6f7024b-4f5e-49c8-82e4-2e22ced7ea14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b723d98-bb14-4da0-8503-f4b52f6cf61c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
