assignment_23_june.ipynb

--- a/assignment_23_june.ipynb
+++ b/assignment_23_june.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 162,
    "id": "01ff09fa-c6d2-47a4-9adf-aa66beee22ec",
    "metadata": {},
    "outputs": [
@@ -156,14 +156,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter a string : - hey mh hai hey\n"
+      "Enter a string : - hey j h j k h s d\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['hey', 'mh', 'hai']\n"
+      "hey j h k s d\n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
     "split_word = check_str.split(\" \")\n",
     "new_str=[]\n",
     "[new_str.append(x) for x in split_word if x not in new_str]\n",
-    "print(new_str)\n",
+    "print(*new_str)\n",
     "\n",
     "                "
    ]
